objects/Bundled_Offer__c.object
<CustomObject>
    <description>To store information related to Bundled Offer
Process : Bundle Offer process
Jira Ticket : PC-369
Domain : Vehicle Intelligence</description>
    <fields>
        <fullName>ACV_Adjusted_Bundle_Price__c</fullName>
        <description>Calculate the sum all ACV Estimated price from all associated Vehicles</description>
        <label>ACV Adjusted Bundle Price</label>
        <summarizedField>BundleOfferVehicleAssociation__c.ACV_Estimated_Price__c</summarizedField>
        <summaryForeignKey>BundleOfferVehicleAssociation__c.Bundled_Offer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bundle_Adjustment_Percentage__c</fullName>
        <label>Bundle Adjustment Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bundle_Date__c</fullName>
        <description>Process : Bundle Offer process
Jira Ticket : PC-369
Domain : Vehicle Intelligence</description>
        <label>Bundle Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bundle_Id__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <externalId>true</externalId>
        <label>Bundle Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bundle_Size__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Bundle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Status__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Bundle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Token__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Bundle Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_Offer_Vehicle_Association_Size__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Bundled Size</label>
        <summaryForeignKey>BundleOfferVehicleAssociation__c.Bundled_Offer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <formula>Dealer__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bundled Offers</relationshipLabel>
        <relationshipName>Bundled_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Offer_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Is Offer Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lister_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Listed Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bundled_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lister_TM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Listed Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bundled_Offers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_Date__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Offer Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Offer Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Sent_Date__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Offer Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>acv_estimated</fullName>
                    <label>ACV Estimated</label>
                </value>
                <value>
                    <fullName>high_bid</fullName>
                    <label>High Bid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_Email_Address__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Seller Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unadjusted_Bundle_Price__c</fullName>
        <description>Process : Bundle Offer process
        Jira Ticket : PC-369
        Domain : Vehicle Intelligence</description>
        <label>Unadjusted Bundle Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bundled Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Lister_AM__c</columns>
        <columns>Lister_TM__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Bundle_Size__c</columns>
        <columns>ACV_Adjusted_Bundle_Price__c</columns>
        <columns>Unadjusted_Bundle_Price__c</columns>
        <columns>Bundle_Status__c</columns>
        <columns>Bundle_Date__c</columns>
        <columns>Is_Offer_Sent__c</columns>
        <columns>Bundle_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundled Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundled Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>